--- a/Crazy Frog/Base.lproj/Main_iPad.storyboard
+++ b/Crazy Frog/Base.lproj/Main_iPad.storyboard
@@ -447,6 +447,39 @@
             </objects>
             <point key="canvasLocation" x="760.15625" y="-336.328125"/>
         </scene>
+        <!--About Me View Controller-->
+        <scene sceneID="ulh-CX-pDT">
+            <objects>
+                <viewController storyboardIdentifier="aboutMeViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="kfA-yA-7Nk" customClass="CFAboutMeViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="z7b-Qr-qJm"/>
+                        <viewControllerLayoutGuide type="bottom" id="19b-87-UtK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="QC2-TB-SJw" customClass="CFAboutMeViewController">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="MainView" translatesAutoresizingMaskIntoConstraints="NO" id="nW2-TX-6Jh">
+                                <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fgw-j3-eVM">
+                                <rect key="frame" x="109" y="145" width="157" height="116"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
+                                <color key="tintColor" cocoaTouchSystemColor="lightTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JEZ-Em-2Qm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1004.6875" y="46.875"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Award-1" width="230" height="230"/>
