--- a/Crazy Frog/Base.lproj/Main_iPhone.storyboard
+++ b/Crazy Frog/Base.lproj/Main_iPhone.storyboard
@@ -136,7 +136,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ucS-BM-jgc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="737.68115942028987" y="-938.16964285714278"/>
+            <point key="canvasLocation" x="-14.492753623188406" y="-1003.125"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="4Ez-5X-zXV">
@@ -297,7 +297,53 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FLc-wd-rlA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="737.68115942028987" y="-617.41071428571422"/>
+            <point key="canvasLocation" x="757" y="-1003"/>
+        </scene>
+        <!--About Me View Controller-->
+        <scene sceneID="1qo-PL-Zpv">
+            <objects>
+                <viewController storyboardIdentifier="aboutMeViewController" autoresizesArchivedViewToFullSize="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="JAN-I1-Skx" customClass="CFAboutMeViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xLi-ir-8y3"/>
+                        <viewControllerLayoutGuide type="bottom" id="Izd-UO-yjS"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="2SQ-3r-SsN" customClass="CFAboutMeViewController">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="MainView" translatesAutoresizingMaskIntoConstraints="NO" id="I6M-zi-mYH">
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H7c-b0-10u">
+                                <rect key="frame" x="10" y="54" width="75" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="2RE-21-m7Y"/>
+                                    <constraint firstAttribute="width" constant="75" id="onG-KI-F6T"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <state key="normal" image="Back">
+                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="backButtonTapped" destination="CAQ-DX-4LT" eventType="touchUpInside" id="Inn-xe-6QX"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XUn-yv-ND7">
+                                <rect key="frame" x="159" y="533" width="71" height="60"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                    <color key="titleShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="b09-Ig-yIR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-996" y="-227"/>
         </scene>
         <!--Game View Controller-->
         <scene sceneID="h0D-Sg-1CC">
@@ -508,7 +554,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3Vq-BM-Ynx" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="498.55072463768118" y="43.526785714285715"/>
+            <point key="canvasLocation" x="316" y="-323"/>
         </scene>
     </scenes>
     <resources>
